@@ -1,4 +1,5 @@
 1.14.135.alpha.1 - 1st November 2023
+- For 'Enhance tooltip' ('Interface'), the scale slider now applies to the game settings panel tooltips.
 - Added flight times.
 
 1.14.134 - 1st November 2023
